Lots of bug fixes, etc.